feat: day 001 완료
- scss 활용하기 위해 bem convention으로 class명 짓기
- animation 속성 처음 사용

--- a/002/002.html
+++ b/002/002.html
@@ -9,7 +9,11 @@
 <body>
     <div class="frame">
         <div class="center">
-            <p>Happy coding :)</p>
+            <div class="burger-menu no-animation" onclick="clickMenu(this);">
+                <div class="burger-menu__bar bar-1"></div>
+                <div class="burger-menu__bar bar-2"></div>
+                <div class="burger-menu__bar bar-3"></div>
+            </div>
         </div>
     </div>
     <script src="002.js"></script>
