--- a/003/003.html
+++ b/003/003.html
@@ -1,6 +1,18 @@
-<div class="frame">
-    <div class="center">
-          <p>Happy coding :)</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="003.css">
+    <title>Challenge 3 day</title>
+</head>
+<body>
+    <div class="frame">
+        <div class="center">
+            <div class=""></div>
+        </div>
     </div>
-  </div>
-  
+    <script src="003.js"></script>
+</body>
+</html>
