feat: day 003 html&css 추가
- 애니메이션 기능을 넣기 전 화면에 그리는 것만 완료
- 원형 안에 mountain 안을 mountain__left, mountain__right로 나누려고 했는데 overflow가 제대로 동작하지 않는 문제가 있고 굳이 나누지 않아도 문제를 해결할 수 있어 left만 남겨둠
  하지만 left와 right를 나누는 편이 구조적으로 한눈에 보기 좋지 않을까 싶음

느낀점
- 하나 완료할 때마다 커밋하는건 의미없는 커밋이 늘어날 것 같아 html&css 완료한 내용을 한번에 커밋했는데, 생각보다 어렵다
  간단해보여도 모르는 부분이 많기 때문에 다른 프로젝트에서 기능별로 커밋하듯 나누어 커밋하는 것이 좋을 것 같음

--- a/003/003.html
+++ b/003/003.html
@@ -10,7 +10,17 @@
 <body>
     <div class="frame">
         <div class="center">
-            <div class=""></div>
+            <div class="circle">
+                <div class="sun"></div>
+                <div class="background">
+                    <div class="background__sky"></div>
+                    <div class="background__earth"></div>
+                </div>
+                <div class="mountain">
+                    <div class="mountain__left"></div>
+                </div>
+                <div class="mountain__shadow"></div>
+            </div>
         </div>
     </div>
     <script src="003.js"></script>
