feat: day 003 정답코드 보며 피드백
- cubic-bezier을 세팅하고 keyframes 안에서 속도를 조절하기보다, animation 속성을 줄 때만 세팅한 cubic-bezier 사용
- clip-path를 처음 사용해봄. 수치를 조절하여 원하는 도형을 쉽게 만들 수 있음 (둔각 삼각형 등)
- transform-origin으로 위치를 고정하고, transform scaleY로 산 그림자가 해 위치에 따라 변화하는 모습을 표현

--- a/003/003.html
+++ b/003/003.html
@@ -18,6 +18,7 @@
                 </div>
                 <div class="mountain">
                     <div class="mountain__left"></div>
+                    <div class="mountain__right"></div>
                 </div>
                 <div class="mountain__shadow"></div>
             </div>
